@@ -10,6 +10,11 @@ Format:
 - Removed/deprecated feature/method .... (user visible removed feature - passed on to release notes)
 . Any other notes .... 				     (internal changes)
 
+
+2013-12-17 (Kristian Spangsege)
+. Class `File` and related exceptions such as `File::AccessError` moved to namespace `tightdb::util`.
+
+
 2013-11-07 (Alexander Stigsen)
 . BREAKING CHANGE: Schema now handles attributes separately for better performance when there are many colummns.
 
